test3 interactive plots

--- a/_posts/2021-04-14-exotic-deri-trading.html
+++ b/_posts/2021-04-14-exotic-deri-trading.html
@@ -1,12 +1,18 @@
 ---
-title: "How to Use Plotly with Jekyll and Github Pages"
-output: html_document
-layout: post
-date: 'May 14, 2016'
-comments: true
-tags: R
+title: "Greeks"
+classes: wide
+toc: true
+toc_sticky: true
 htmlwidgets: true
-description: Using Plotly on a Github hosted blog doesn't have to be hard.  Follow these 4 steps to include amazing interactive charts in your blog post
+output: html_document
+categories: 
+  - Post
+last_modified_at: 2021-04-15
+tags:
+  - structured product
+  - financial engineering
+  - black scholes  
+htmlwidgets: true
 ---
 
 
